GNOME Bugzilla – Bug 673465
Command line never properly generated for sending mail
Last modified: 2012-04-11 14:21:03 UTC
When trying to send an attachment by mail, the command line is never properly generated. This is due to an improper use of g_strdup_printf: cmd = g_strdup_printf (mail_cmd, mailto->str); The function should be used like this instead: cmd = g_strdup_printf ("%s%s", mail_cmd, mailto->str);
this issue seems present in both master and gnome-3-0
Created attachment 211286 [details] [review] Fix command line used to call the mail client g_strdup_printf() requires a format string like printf()
Created attachment 211288 [details] [review] Fix command line used to call the mail client g_strdup_printf() requires a format string like printf() Branch: gnome-3-0
Created attachment 211290 [details] [review] Fix command line used to call the mail client g_strdup_printf() requires a format string like printf() Branch: gnome-3-0
*** Bug 673467 has been marked as a duplicate of this bug. ***
Fixed in gnome-3-0: commit a3449cc91846792543abc80266fd42eebfe6bb6a Author: Bastien Nocera <hadess@hadess.net> Date: Wed Apr 11 11:13:52 2012 +0100 evolution: Fix command generation Since the GAppInfo move. %U needs to be transformed so it can be "printed" properly. And master: commit 554bfe5a1f890a412a1198741d96493b74c9f56a Author: Bastien Nocera <hadess@hadess.net> Date: Wed Apr 11 11:13:52 2012 +0100 evolution: Fix command generation Since the GAppInfo move. %U needs to be transformed so it can be "printed" properly. Conflicts: src/plugins/evolution/evolution.c
I'm not sure if g_strrstr() is case sensitive, but looking at http://git.gnome.org/browse/nautilus-sendto/commit/?h=gnome-3-0&id=a3449cc91846792543abc80266fd42eebfe6bb6a you are replacing %U by %s,the claws-mail.desktop is using %u
(In reply to comment #7) > I'm not sure if g_strrstr() is case sensitive, but looking at > http://git.gnome.org/browse/nautilus-sendto/commit/?h=gnome-3-0&id=a3449cc91846792543abc80266fd42eebfe6bb6a > you are replacing %U by %s,the claws-mail.desktop is using %u We need to handle both (one means only URLs, the other one URLs or local paths[1]). Fixed in master and gnome-3-0. [1]: http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s06.html