evolution: Also handle "%u" parameters

https://bugzilla.gnome.org/show_bug.cgi?id=673465#c7